# eyelinkparser

./: .cookiecutter.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  copyright  eyelinkparser.py  noxfile.py  pyproject.toml  readme-template.md  readme.md  setup.py  stdeb.cfg  using-eyelinkparser.ipynb
.circleci/: config.yml
.github/workflows/: python_package.yml
data/: data1.asc
docs/: conf.py  index.md  reference.md  usage.md
eyelinkparser/: __init__.py  _events.py  _eyelinkparser.py  _traceprocessor.py
eyetribeparser/: __init__.py  _eyetribeparser.py
gazepointparser/: __init__.py
smiparser/: __init__.py  _smiparser.py
src/python-eyelink-parser/data/: data2.asc
src/python-eyelink-parser/eyelinkparser/: _events.py
src/python-eyelink-parser/gazepointparser/: _gazepointparser.py
src/python-eyelink-parser/smiparser/: _smiparser.py
src/python_eyelink_parser/: __init__.py  __main__.py
src/python_eyelink_parser/eyelinkparser/: __init__.py  _eyelinkparser.py
tests/: __init__.py  test_import.py  test_main.py
